diesel_compile_tests/tests/fail/boxed_queries_must_be_used_with_proper_connection.stderr
error[E0271]: type mismatch resolving `<SqliteConnection as Connection>::Backend == Pg`
    --> tests/fail/boxed_queries_must_be_used_with_proper_connection.rs:16:25
     |
16   |         .load::<(i32,)>(&mut connection);
     |          ----           ^^^^^^^^^^^^^^^ expected `Pg`, found `Sqlite`
     |          |
     |          required by a bound introduced by this call
     |
     = note: required for `BoxedSelectStatement<'_, (diesel::sql_types::Integer,), FromClause<users::table>, Pg>` to implement `LoadQuery<'_, diesel::SqliteConnection, (i32,)>`
note: required by a bound in `diesel::RunQueryDsl::load`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
     |        ---- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
For more information about this error, try `rustc --explain E0271`.
